ch(chore): refactor endpoints
- update send mail endpoint
- update signin user endpoint

[Delivers #164652556]
