# server/controllers/messages.js
@@ -1,4 +1,8 @@
-import db from '../db/messagesDb';
+import jwt from 'jsonwebtoken';
+import config from '../config';
+import db from '../models/messagesDb';
+import userDB from '../models/usersDb';
+
 import validateMessage from '../helpers/validateMessage';
 
 
@@ -17,23 +21,39 @@ class Message {
         errors,
       });
     }
-    let message = [];
-    message = {
-      id: db.length + 1,
-      createdOn: new Date(),
-      subject: req.body.subject,
-      message: req.body.message,
-      senderId: req.body.senderId,
-      receiverId: req.body.receiverId,
-      parentMessageId: [],
-      status: 'unread',
-      isDeleted: false,
-    };
-    db.push(message);
-    return res.status(201).send({
-      status: 201,
-      message: 'Message sent successfully',
-      data: message,
+    const checkReceiver = userDB.find(dbU => dbU.id === Number(req.body.receiverId));
+    if (checkReceiver) {
+      jwt.verify(req.token, config.secret, (err, authData) => {
+        if (err) {
+          res.status(403).send({
+            status: 403,
+            message: 'Token mismatch',
+          });
+        } else {
+          let message = [];
+          message = {
+            id: db.length + 1,
+            createdOn: new Date(),
+            subject: req.body.subject,
+            message: req.body.message,
+            senderId: req.body.senderId,
+            receiverId: checkReceiver.id,
+            status: 'unread',
+            senderDelete: false,
+            receiverDelete: false,
+          };
+          db.push(message);
+          return res.status(201).send({
+            status: 201,
+            message: 'Message sent successfully',
+            data: { ...message, authData },
+          });
+        }
+      });
+    }
+    return res.status(400).send({
+      status: 400,
+      message: 'Receiver does not exist',
     });
   }
 
@@ -44,10 +64,17 @@ class Message {
    * @returns {object} message object
    */
   static getAllMails(req, res) {
-    return res.status(200).send({
-      status: 200,
-      message: 'All received emails',
-      data: db,
+    const result = db.filter(val => val.isDeleted === false);
+    if (result) {
+      return res.status(200).send({
+        status: 200,
+        message: 'All received emails',
+        data: result,
+      });
+    }
+    return res.status(404).send({
+      status: 404,
+      message: 'No emails found',
     });
   }
   /**
